syntax = "proto3";
package App.Acitivity.AppNewUserZoneCodeInfo;
option objc_class_prefix="AppNewUserZoneCodeInfo";
option java_package = "com.asiainno.hekka.proto.app.activity";

// 获取new UserZone配置的code 配置信息，登录页面用
//url: https://****.com/activity/newUserZone/codeInfo
message Request {
  int32 platform = 1;
  string countryCode = 2; // 如果存在， 就不用切面中获取的国家站, 在注册页面使用个，其他场景不需要关注
}

message Response {
  CodeDetail CodeDetail = 1;
}
message CodeDetail {
  string code= 1;// code
  int64 startTime = 2; //开始时间
  int64 endTime = 3; //结束时间
  int32 codeType = 4; // 1 fixed discount amount , 2 Fixed discount percentage
  int32 codeValue = 5;
  int32 restrictionRule = 6;//1. 不做限制 ,2. 最小订单金额，订单内商品满足最小金额时可用计算时不包含邮费,3. 最小商品数量 订单内商品满足最小数量时可用
  int32 restrictionRuleValue = 7;  // 如果是钱 单位为分
}

